--- a/A1-skeleton.ipynb
+++ b/A1-skeleton.ipynb
@@ -392,7 +392,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 220,
+   "id": "fbd0bd49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torchvision.transforms as transforms\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "from torchvision.datasets import ImageFolder\n",
+    "from torchvision.models import resnet18\n",
+    "from PIL import Image\n",
+    "import tqdm\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "53fb5a8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ContrastiveLoss(nn.Module):\n",
+    "    def __init__(self, margin=1.0):\n",
+    "        super(ContrastiveLoss, self).__init__()\n",
+    "        self.margin = margin\n",
+    "\n",
+    "    def forward(self, output1, output2, label):\n",
+    "        euclidean_distance = nn.functional.pairwise_distance(output1, output2)\n",
+    "        loss_contrastive = torch.mean((1-label) * torch.pow(euclidean_distance, 2) +\n",
+    "                                      (label) * torch.pow(torch.clamp(self.margin - euclidean_distance, min=0.0), 2))\n",
+    "\n",
+    "\n",
+    "        return loss_contrastive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
    "id": "c71c8f80",
    "metadata": {},
    "outputs": [
@@ -407,34 +447,26 @@
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'Tensor' object has no attribute '__array_interface__'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 3, 105, 105]) torch.Size([32, 3, 105, 105]) torch.Size([32])\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[194], line 122\u001b[0m\n\u001b[1;32m    120\u001b[0m siamese_dataset \u001b[38;5;241m=\u001b[39m create_siamese_dataset(train_data)\n\u001b[1;32m    121\u001b[0m train_loader \u001b[38;5;241m=\u001b[39m DataLoader(siamese_dataset, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m32\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m--> 122\u001b[0m \u001b[43mtrain_siamese_network\u001b[49m\u001b[43m(\u001b[49m\u001b[43msiamese_network\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    124\u001b[0m \u001b[38;5;66;03m# unlabeled_image1_path = 'path_to_unlabeled_image1.jpg'\u001b[39;00m\n\u001b[1;32m    125\u001b[0m \u001b[38;5;66;03m# unlabeled_image2_path = 'path_to_unlabeled_image2.jpg'\u001b[39;00m\n\u001b[1;32m    126\u001b[0m \u001b[38;5;66;03m# image1 = load_image(unlabeled_image1_path)\u001b[39;00m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;66;03m# image2 = load_image(unlabeled_image2_path)\u001b[39;00m\n\u001b[1;32m    128\u001b[0m \u001b[38;5;66;03m# similarity = compute_similarity(siamese_network, image1, image2)\u001b[39;00m\n\u001b[1;32m    129\u001b[0m \u001b[38;5;66;03m# print(\"Similarity between images:\", similarity)\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[194], line 102\u001b[0m, in \u001b[0;36mtrain_siamese_network\u001b[0;34m(siamese_network, train_loader, num_epochs, learning_rate)\u001b[0m\n\u001b[1;32m    100\u001b[0m running_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n\u001b[1;32m    101\u001b[0m \u001b[38;5;66;03m#for img1, img2, label1 in train_loader:\u001b[39;00m\n\u001b[0;32m--> 102\u001b[0m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m    103\u001b[0m \u001b[43m    \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzero_grad\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    104\u001b[0m     \u001b[38;5;66;03m#output1, output2 = siamese_network(img1, img2)\u001b[39;00m\n\u001b[1;32m    105\u001b[0m     \u001b[38;5;66;03m#loss = criterion(output1, output2, label1)\u001b[39;00m\n\u001b[1;32m    106\u001b[0m     \u001b[38;5;66;03m#loss.backward()\u001b[39;00m\n\u001b[1;32m    107\u001b[0m     \u001b[38;5;66;03m#optimizer.step()\u001b[39;00m\n\u001b[1;32m    108\u001b[0m \n\u001b[1;32m    109\u001b[0m     \u001b[38;5;66;03m#running_loss += loss.item()\u001b[39;00m\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.11.0/lib/python3.11/site-packages/torch/utils/data/dataloader.py:631\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    628\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sampler_iter \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    629\u001b[0m     \u001b[38;5;66;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    630\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reset()  \u001b[38;5;66;03m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 631\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_next_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    632\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    633\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_kind \u001b[38;5;241m==\u001b[39m _DatasetKind\u001b[38;5;241m.\u001b[39mIterable \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    634\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    635\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called:\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.11.0/lib/python3.11/site-packages/torch/utils/data/dataloader.py:675\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    673\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_next_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    674\u001b[0m     index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_index()  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 675\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dataset_fetcher\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfetch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    676\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory:\n\u001b[1;32m    677\u001b[0m         data \u001b[38;5;241m=\u001b[39m _utils\u001b[38;5;241m.\u001b[39mpin_memory\u001b[38;5;241m.\u001b[39mpin_memory(data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory_device)\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.11.0/lib/python3.11/site-packages/torch/utils/data/_utils/fetch.py:51\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     49\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mpossibly_batched_index\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.11.0/lib/python3.11/site-packages/torch/utils/data/_utils/fetch.py:51\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     49\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m         data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n",
-      "Cell \u001b[0;32mIn[194], line 58\u001b[0m, in \u001b[0;36mSiameseDataset.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m     55\u001b[0m img1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimages[idx]\n\u001b[1;32m     56\u001b[0m label1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlabels[idx]\n\u001b[0;32m---> 58\u001b[0m img1 \u001b[38;5;241m=\u001b[39m \u001b[43mImage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfromarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg1\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mconvert(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRGB\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     60\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransform:\n\u001b[1;32m     61\u001b[0m     img1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransform(img1)\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.11.0/lib/python3.11/site-packages/PIL/Image.py:3119\u001b[0m, in \u001b[0;36mfromarray\u001b[0;34m(obj, mode)\u001b[0m\n\u001b[1;32m   3072\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfromarray\u001b[39m(obj, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m   3073\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   3074\u001b[0m \u001b[38;5;124;03m    Creates an image memory from an object exporting the array interface\u001b[39;00m\n\u001b[1;32m   3075\u001b[0m \u001b[38;5;124;03m    (using the buffer protocol)::\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   3117\u001b[0m \u001b[38;5;124;03m    .. versionadded:: 1.1.6\u001b[39;00m\n\u001b[1;32m   3118\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 3119\u001b[0m     arr \u001b[38;5;241m=\u001b[39m \u001b[43mobj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__array_interface__\u001b[49m\n\u001b[1;32m   3120\u001b[0m     shape \u001b[38;5;241m=\u001b[39m arr[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshape\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m   3121\u001b[0m     ndim \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(shape)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Tensor' object has no attribute '__array_interface__'"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[222], line 111\u001b[0m\n\u001b[1;32m    106\u001b[0m     \u001b[38;5;28mprint\u001b[39m(img1\u001b[38;5;241m.\u001b[39mshape, img2\u001b[38;5;241m.\u001b[39mshape, label1\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m    107\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m--> 111\u001b[0m \u001b[43mtrain_siamese_network\u001b[49m\u001b[43m(\u001b[49m\u001b[43msiamese_network\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    113\u001b[0m \u001b[38;5;66;03m# unlabeled_image1_path = 'path_to_unlabeled_image1.jpg'\u001b[39;00m\n\u001b[1;32m    114\u001b[0m \u001b[38;5;66;03m# unlabeled_image2_path = 'path_to_unlabeled_image2.jpg'\u001b[39;00m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;66;03m# image1 = load_image(unlabeled_image1_path)\u001b[39;00m\n\u001b[1;32m    116\u001b[0m \u001b[38;5;66;03m# image2 = load_image(unlabeled_image2_path)\u001b[39;00m\n\u001b[1;32m    117\u001b[0m \u001b[38;5;66;03m# similarity = compute_similarity(siamese_network, image1, image2)\u001b[39;00m\n\u001b[1;32m    118\u001b[0m \u001b[38;5;66;03m# print(\"Similarity between images:\", similarity)\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[222], line 82\u001b[0m, in \u001b[0;36mtrain_siamese_network\u001b[0;34m(siamese_network, train_loader, num_epochs, learning_rate)\u001b[0m\n\u001b[1;32m     79\u001b[0m criterion \u001b[38;5;241m=\u001b[39m ContrastiveLoss()\n\u001b[1;32m     80\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m optim\u001b[38;5;241m.\u001b[39mAdam(siamese_network\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39mlearning_rate)\n\u001b[0;32m---> 82\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtqdm\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     83\u001b[0m     running_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n\u001b[1;32m     84\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m img1, img2, label1 \u001b[38;5;129;01min\u001b[39;00m train_loader:\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
      ]
     }
    ],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import torchvision.transforms as transforms\n",
-    "from torch.utils.data import DataLoader, Dataset\n",
-    "from torchvision.datasets import ImageFolder\n",
-    "from torchvision.models import resnet18\n",
-    "from PIL import Image\n",
-    "import os\n",
     "\n",
     "# Siamese Network definition\n",
     "class SiameseNetwork(nn.Module):\n",
@@ -481,22 +513,16 @@
     "    def __getitem__(self, idx):\n",
     "\n",
     "        img1 = self.images[idx]\n",
+    "        img1 = img1.repeat(3, 1, 1)\n",
     "        label1 = self.labels[idx]\n",
     "\n",
-    "        img1 = Image.fromarray(img1).convert('RGB')\n",
-    "\n",
-    "        if self.transform:\n",
-    "            img1 = self.transform(img1)\n",
-    "        \n",
     "        # Sample a random image from the same class\n",
     "        class_images = []\n",
     "        for i, label in enumerate(self.labels):\n",
     "            if label == label1:\n",
     "                class_images.append(self.images[i])\n",
     "        img2 = class_images[np.random.choice(len(class_images))]\n",
-    "        img2 = Image.fromarray(img2).convert('RGB')\n",
-    "        if self.transform:\n",
-    "            img2 = self.transform(img2)\n",
+    "        img2 = img2.repeat(3, 1, 1)\n",
     "\n",
     "        return img1, img2, torch.tensor(label1)\n",
     "\n",
@@ -520,10 +546,10 @@
     "\n",
     "# Function to train Siamese network\n",
     "def train_siamese_network(siamese_network, train_loader, num_epochs=10, learning_rate=0.001):\n",
-    "    criterion = nn.TripletMarginLoss()\n",
+    "    criterion = ContrastiveLoss()\n",
     "    optimizer = optim.Adam(siamese_network.parameters(), lr=learning_rate)\n",
     "\n",
-    "    for epoch in range(num_epochs):\n",
+    "    for epoch in tqdm(range(num_epochs)):\n",
     "        running_loss = 0.0\n",
     "        for img1, img2, label1 in train_loader:\n",
     "            optimizer.zero_grad()\n",
@@ -545,6 +571,13 @@
     "siamese_network = SiameseNetwork(pretrained=True)\n",
     "siamese_dataset = create_siamese_dataset(train_data)\n",
     "train_loader = DataLoader(siamese_dataset, batch_size=32, shuffle=True)\n",
+    "\n",
+    "for img1, img2, label1 in train_loader:\n",
+    "    print(img1.shape, img2.shape, label1.shape)\n",
+    "    break\n",
+    "\n",
+    "\n",
+    "\n",
     "train_siamese_network(siamese_network, train_loader)\n",
     "\n",
     "# unlabeled_image1_path = 'path_to_unlabeled_image1.jpg'\n",
