--- a/Assigniment_1_Group_6.ipynb
+++ b/Assigniment_1_Group_6.ipynb
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 4,
       "id": "0ed5889c",
       "metadata": {},
       "outputs": [],
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 12,
       "id": "initial_id",
       "metadata": {
         "collapsed": true,
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 2,
       "id": "d19b9de0e3461531",
       "metadata": {
         "id": "d19b9de0e3461531"
@@ -3685,7 +3685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 15,
       "id": "aa248dbece85da5c",
       "metadata": {
         "id": "aa248dbece85da5c"
@@ -3726,7 +3726,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 16,
       "id": "7f707a7f",
       "metadata": {},
       "outputs": [
@@ -3736,7 +3736,7 @@
               "7"
             ]
           },
-          "execution_count": 70,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -3747,7 +3747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 17,
       "id": "ef9bcef5572f0a78",
       "metadata": {
         "id": "ef9bcef5572f0a78"
@@ -3757,11 +3757,11 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Alphabet: Ge_ez\n",
-            "Some character types that preceded unseen images from the Ge_ez alphabet: ['II' 'II' 'II' 'II' 'I']\n",
-            "There are 494 preceding character types in the Ge_ez alphabet, and 494 unseen images.\n",
-            "Type of character16 from the Ge_ez alphabet: I\n",
-            "Probability of a character of type I following a character of type I in the Ge_ez alphabet: 0.5808383233532934\n"
+            "Alphabet: Gurmukhi\n",
+            "Some character types that preceded unseen images from the Gurmukhi alphabet: ['I' 'I' 'II' 'II' 'II']\n",
+            "There are 855 preceding character types in the Gurmukhi alphabet, and 855 unseen images.\n",
+            "Type of character27 from the Gurmukhi alphabet: I\n",
+            "Probability of a character of type I following a character of type II in the Gurmukhi alphabet: 0.17164179104477612\n"
           ]
         }
       ],
@@ -4251,7 +4251,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.8"
+      "version": "3.11.0"
     }
   },
   "nbformat": 4,
